# pyquack

./: .pre-commit-config.yaml  404.html  CNAME  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: python-publish.yml
api_reference/: index.html
docs/: api_reference.md  index.md  models.md  quickstart.md
models/: index.html
pyquack/: __init__.py  __main__.py  _async.py  models.py  response.py  sync.py
pyquack/_async/: __init__.py  client.py
pyquack/sync/: __init__.py  client.py
search/: search_index.json
